# BoidsOpenGL

./: .gitignore  CMakeLists.txt
assets/: AssetPaths.hpp.in  CMakeLists.txt  boid.col  boid.mdl
include/: Boid.hpp  CMakeLists.txt  Camera.hpp  Entity.hpp  EventHandler.hpp  Grid.hpp  Model.hpp  Renderer.hpp  ShaderHelper.hpp  ShaderProgram.hpp  main.hpp
shaders/: CMakeLists.txt  ShaderPaths.hpp.in  boid.fs.glsl  boid.vs.glsl  grid.fs.glsl  grid.vs.glsl
source/: Boid.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  EventHandler.cpp  Grid.cpp  Model.cpp  Renderer.cpp  ShaderProgram.cpp  main.cpp
